fixed reset button background color inherit on mobile

--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ li {
 
 
 #button {
+    background-color: #9F9F9FFF;
     border: 2px solid black;
     border-radius: 5px;
     text-align: center;
